--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ body {
 }
 
 button {
+  border: none;
   border-radius: 4px;
   cursor: pointer;
 
@@ -39,5 +40,40 @@ button {
     font-weight: 500;
     letter-spacing: .68px;
     text-transform: uppercase;
+  }
+}
+
+input {
+  height: 50px;
+  padding: 12px;
+  border: .5px;
+  border-radius: 4px;
+  background-color: rgba(76, 96, 133, .2);
+  color: white;
+
+  &:hover {
+    background-color: rgba(76, 96, 133, .4);
+  }
+
+  &:focus-visible {
+    outline: none;
+    background-color: rgba(76, 96, 133, .6);
+  }
+
+  &::placeholder {
+    font-weight: 500;
+    color: rgba(250, 252, 255, .75);
+  }
+
+  &[type='number'] {
+    margin: 0;
+
+    &::-webkit-inner-spin-button {
+      appearance: none;
+      width: 1rem;
+      cursor: pointer;
+      background: url('/arrow_drop_down.svg'), url('/arrow_drop_up.svg');
+      background-position: top, bottom;
+    }
   }
 }
