added pagination, changed styles for the navbar and the items grid

--- a/src/components/item-grid/item-grid.css
+++ b/src/components/item-grid/item-grid.css
@@ -31,6 +31,10 @@
     }
 
     @media (max-width: 576px) {
+        :scope {
+            padding: 33px;
+        }
+
         .item-grid {
             gap: 15px;
             grid-template-columns: repeat(1, 1fr);
