--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -11,6 +11,7 @@
         border-bottom: 1px solid rgba(76, 96, 133, .5);
         background-color: var(--primary-bg);
         color: white;
+        container-type: inline-size;
     }
 
     .nav-brand {
@@ -74,7 +75,7 @@
             margin-left: 8px;
             width: 11px;
             height: 7px;
-            justify-self: unset !important;
+            justify-self: unset;
             opacity: 1;
             transition: .2s ease-in;
         }
@@ -84,6 +85,11 @@
         flex-wrap: wrap;
         align-items: center;
         margin-left: auto;
+
+        >.cart {
+            gap: 6px;
+            display: flex;
+        }
 
         >button.flex {
             align-items: center;
@@ -101,20 +107,15 @@
         }
     }
 
-    @media (max-width: 1210px) {
-        .nav {
-            position: fixed;
-            z-index: 1000;
-            width: 100%;
-        }
-
+    @media (width < 1500px) {
         .mobile-toggle {
             display: block;
             position: relative;
             margin-left: auto;
             z-index: 1001;
-            background: url('../assets/Hamburger_icon.svg');
+            background: url('/menu.svg');
             background-repeat: no-repeat;
+            background-position: center;
             cursor: pointer;
             width: 2rem;
             border: 0;
@@ -126,23 +127,40 @@
             inset: 0 0 0 40%;
             z-index: 999;
             flex-direction: column;
-            padding-block: min(30vh, 10rem) 2rem;
+            padding-block: 5rem 2rem;
             background-color: hsla(237, 15%, 25%, 0.608);
             transform: translateX(100%);
-            transition: transform .28s cubic-bezier(.4, 0, .2, 1);
         }
 
         .visible {
+            display: flex;
             transform: translateX(0);
+            transition: transform .28s cubic-bezier(.4, 0, .2, 1) allow-discrete;
+
+            @starting-style {
+                display: none;
+                transform: translateX(100%);
+            }
         }
 
         .main-nav {
-            flex-direction: column;
+            width: 100%;
+            grid-auto-flow: row;
             margin: 0;
         }
 
+        .nav-link {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
         .button-row {
+            flex-direction: column;
             margin: 0;
+            align-items: stretch;
+
+            >button {
+                width: fit-content;
+            }
         }
     }
 }
