--- a/src/components/main-content/pagination/pagination.css
+++ b/src/components/main-content/pagination/pagination.css
@@ -25,7 +25,7 @@
     @media (width < 600px) {
         :scope>button {
             font-size: 14px;
-            padding-inline: auto;
+            padding-inline: 8px;
             height: 30px;
             width: 30px;
 
